<resources>
    <string name="app_name">口算测试</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="action">开始</string>
    <string name="textview" />
    <string name="button">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonc">清零</string>
    <string name="dengyu">=</string>
    <string name="ScoreText">本次成绩为：</string>
    <string name="back">再来一局</string>
    <string name="button1">退出</string>
    <string name="replay">replay</string>
    <string name="close">close</string>
    <string name="wrong">答错了！游戏结束！</string>
</resources>
